--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -106,6 +106,7 @@
       </div>
     </label>
     <ul tabindex="0" class="mt-3 p-2 shadow menu menu-compact dropdown-content bg-base-100 rounded-box w-52">
+      <li class="mx-1"><a href="/">Home</a></li>
       <li class="mx-1"><a href="/profile">Profile</a></li>
       <li class="mx-1"><a href="/feed">Feed</a></li>
       <li class="mx-1"><a href="/reviews">Create review</a></li>
