basic styling and formatting done, need to fix review submission

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,38 @@
 <%- include('partials/header') -%>
 
 <main class="container">
-    <div class="row justify-content-around mt-5">
-        <a href="/login" class="col-3 btn btn-primary"> Login</a>
-        <a href="/signup" class="col-3 btn btn-primary"> Signup</a>
+    <div class="row justify-content-center">
+        <div class="col-lg-7 col-sm-12 box">
+            <!-- about us -->
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur ipsa nostrum reprehenderit error dicta at! Quae consequatur debitis perferendis suscipit vero? Molestiae earum eligendi voluptatem animi reiciendis vero accusamus at?Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus ad ipsa, voluptatem aperiam magnam qui perspiciatis cupiditate rerum esse accusamus labore, repellendus veritatis voluptate dolorum perferendis cum inventore. Officiis, fuga! </p>
+            <!-- search bar -->
+            <h5>Search for an address:</h5>
+            <div class="input-group rounded">
+                <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
+                <span class="input-group-text border-0" id="search-addon">
+                  <i class="fas fa-search"></i>
+                </span>
+              </div>
+        </div>
+        <!-- img -->
+        <div class="col-lg-4 col-sm-12">
+            <img class="img-fluid" src="/images/house.jpg">
+        </div>
     </div>
+
+        <div class="row justify-content-center">
+        <div class="col-lg-7 col-sm-12 box">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit molestiae, doloribus tempore nostrum ex, assumenda vel porro officia eveniet mollitia iusto qui. Iste, nostrum perferendis tempore minus in eius dolor! Lorem ipsum, dolor sit amet consectetur adipisicing elit. In repellat minima praesentium dolores.</p>
+            <div class="row justify-content-around mt-5">
+            <a href="/login" class="col-3 btn btn-outline-light"> Login</a>
+        <a href="/signup" class="col-3 btn btn-outline-light"> Signup</a>
+        </div>
+        </div>
+        <div class="col-lg-4 col-sm-12">
+            <img class="img-fluid" src="/images/young_people.jpg">
+        </div>
+        </div>
+    
 </main>
     
 
