--- a/views/reviews.ejs
+++ b/views/reviews.ejs
@@ -2,30 +2,32 @@
   <div class="container">
   <div class="mt-5">
     <h2>Add a new review</h2>
-    <form action="/reviews/createReview" enctype="multipart/form-data" method="POST">
+    <form action="/reviews/createReview" method="POST">
+
       <div class="mb-3">
           <label for="address" class="form-label">Property Address</label>
           <input type="text" class="form-control" id="address" name="address">
       </div>
-      <div class="mb-3">
-        <label for="tenancyDuration" class="form-label">Dates of tenancy</label>
-        <input type="date" class="form-control" id="tenancyDuration" name="tenancyDuration"></textarea>
+
+      <div class="col-4">
+        <p>Date of tenancy</p>
+        <label for="tenancyStart" class="form-label">From</label>
+        <input type="date" class="form-control" id="tenancyStart" name="tenancyStart"></textarea>
+        <label for="tenancyEnd" class="form-label">To</label>
+        <input type="date" class="form-control" id="tenancyEnd" name="tenancyEnd"></textarea>
       </div>
+
       <div class="mb-3">
         <label for="title" class="form-label">Review title</label>
         <textarea class="form-control" id="title" name="title"></textarea>
       </div>
+
       <div class="mb-3">
         <label for="reviewBody" class="form-label">Review</label>
         <textarea class="form-control" id="reviewBody" name="reviewBody"></textarea>
       </div>
-      
-      <!-- <div class="mb-3">
-        <label for="imgUpload" class="form-label">Image</label>
-        <input type="file" class="form-control" id="imageUpload" name="file">
-      </div> -->
 
-      <button type="submit" class="btn btn-primary" value="Upload">Submit</button>
+      <button type="submit" class="btn btn-primary">Submit</button>
     </form>
   </div>
 </div>
