--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -25,11 +25,9 @@
     /> -->
     <script src="https://kit.fontawesome.com/6528dd7a8c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/style.css" />
-    <link href="/output.css" rel="stylesheet" />
-    <link href="/dist/main.css" rel="stylesheet">
   </head>
   <body>
-    <!-- <div>
+    <div>
       <nav class="navbar navbar-expand-lg navbar-custom">
         <div class="container-fluid">
           <a class="navbar-brand" href="/profile"><i class="fa-solid fa-house"></i>   Rate your rental</a>
@@ -50,6 +48,6 @@
           </div>
         </div>
   </nav>
-  </div> -->
+  </div>
   </body>
 </html>
