--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -22,5 +22,24 @@
   </head>
   <body>
 
+    <div class="navbar bg-base-200">
+      <div class="flex-1">
+        <a class="btn btn-primary normal-case text-xl">Rate your rental</a>
+      </div> 
+      <div class="flex-none gap-2 ">
+        <div class="form-control bg-base-200">
+          <input type="text" placeholder="Search" class="input input-bordered" />
+        </div>
+        <div class="dropdown dropdown-end ">
+          <label tabindex="0" class="btn btn-primary btn-circle avatar">
+            <div class="w-10 rounded-full">
+              <img src="/images/stock/cat-gf56b6db9a_640.jpg" />
+            </div>
+          </label>
+          
+        </div>
+      </div>
+    </div>
+
 
   </body> 
