--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,11 +20,11 @@
     <script src="https://kit.fontawesome.com/6528dd7a8c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/style.css">
   </head>
-  <body>
+  <body class="bg-base-200">
 
     <div class="navbar bg-base-200">
       <div class="flex-1">
-        <a class="btn btn-primary normal-case text-xl">Rate your rental</a>
+        <a class="btn btn-primary normal-case text-xl" href="/">Rate your rental</a>
       </div> 
       <div class="flex-none gap-2 ">
         <div class="form-control bg-base-200">
@@ -33,13 +33,14 @@
         <div class="dropdown dropdown-end ">
           <label tabindex="0" class="btn btn-primary btn-circle avatar">
             <div class="w-10 rounded-full">
-              <img src="/images/stock/cat-gf56b6db9a_640.jpg" />
+              <img src="/images/stock/cat.jpg" />
             </div>
           </label>
-          
+          <ul tabindex="0" class="mt-3 p-2 shadow menu menu-compact dropdown-content bg-base-100 rounded-box w-52">
+            <li><a href="/login">Log in</a></li>
+            <li><a href="/signup">Sign up</a></li>
+          </ul>
         </div>
       </div>
     </div>
 
-
-  </body> 
