--- a/views/reviews.ejs
+++ b/views/reviews.ejs
@@ -1,11 +1,11 @@
 <%- include('partials/header') -%>
-  <div class="container">
+<!-- <div class="container">
   <div class="mt-5">
     <h2>Add a new review</h2>
     <form action="/reviews/createReview" enctype="multipart/form-data" method="POST">
       <div class="mb-3">
           <label for="address" class="form-label">Property Address</label>
-          <input type="text" class="form-control" id="address" name="address">
+          <input type="text" class="form-control" >
       </div>
       <div class="mb-3">
         <label for="tenancyDuration" class="form-label">Dates of tenancy</label>
@@ -19,14 +19,57 @@
         <label for="reviewBody" class="form-label">Review</label>
         <textarea class="form-control" id="reviewBody" name="reviewBody"></textarea>
       </div>
-      
-      <!-- <div class="mb-3">
-        <label for="imgUpload" class="form-label">Image</label>
-        <input type="file" class="form-control" id="imageUpload" name="file">
-      </div> -->
 
       <button type="submit" class="btn btn-primary" value="Upload">Submit</button>
     </form>
   </div>
+</div> -->
+
+<div class="container mx-auto">
+<form class="w-full max-w-lg mx-auto" action="/reviews/createReview" enctype="multipart/form-data" method="POST">
+  <div class="flex  -mx-3 mb-6 justify-center">
+    <div class="w-full px-3">
+      <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-property-address">
+        Property address
+      </label>
+      <input type="text" placeholder="Type here" class="input input-bordered input-primary w-full" id="address" name="address"/>
+    </div>
+  </div>
+  <div class="flex flex-wrap -mx-3 mb-6">
+    <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
+      <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-tenancy-from">
+        Tenancy from
+      </label>
+      <input type="date" placeholder="Type here" class="input input-bordered input-primary w-full" id="tenancyFrom" name="tenancyFrom"/>
+    </div>
+    <div class="w-full md:w-1/2 px-3">
+      <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-tenancy-to">
+        Tenancy to
+      </label>
+      <input type="date" placeholder="Type here" class="input input-bordered input-primary w-full" id="tenancyTo" name="tenancyTo"/>
+    </div>
+  </div>
+  <div class="flex flex-wrap -mx-3 mb-6">
+    <div class="w-full px-3">
+      <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="title">
+        Review title
+      </label>
+      <input type="text" placeholder="Type here" class="input input-bordered input-primary w-full" id="title" name="title"/>
+    </div>
+  </div>
+  <div class="flex flex-wrap -mx-3 mb-6">
+    <div class="w-full px-3">
+      <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="body">
+        Review body
+      </label>
+      <input type="text" placeholder="Type here" class="input input-bordered input-primary w-full" id="body" name="body"/>
+    </div>
+  </div>
+    <div class="flex flex-wrap -mx-3 mb-6">
+      <div class="w-full px-3">
+      <button type="submit" class="btn btn-primary" value="Upload">Submit</button>
+      </div>
 </div>
+</form>
+
 <%- include('partials/footer') -%>
