--- a/views/property.ejs
+++ b/views/property.ejs
@@ -1,51 +1,59 @@
 <%- include('partials/header') -%>
-<div class="container mx-auto px-20 py-10 border border-2 border-primary">
+<div class="container mx-auto px-20 py-10">
 <!-- header -->
+<div> <!-- whole property div-->
     <div>
-        <div class="">
-            <h1 class="text-2xl font-bold">Property address</h1>
-        </div>
+        <h1 class="text-2xl font-bold">Property address</h1>
     </div>
-
 <!-- images in grid-->
-  <div class="grid grid-cols-4 gap-2 py-4 border border-2 border-primary content-center">
-    <div class="w-64 bg-base-100 shadow-xl">
+<div class="flex flex-row justify-evenly py-4 border-2 border-amber-600 my-4">
+    <!-- img1 -->
+    <div class="basis-1/4 bg-base-100 shadow-xl">
       <img src="/images/stock/bedroom.jpg" alt="">
   </div>
-
-  <div class="w-64 bg-base-100 shadow-xl">
+<!-- img2 -->
+  <div class="basis-1/4 bg-base-100 shadow-xl">
     <img src="/images/stock/kitchen.jpg" alt="">
   </div>
-
-  <div class="w-64 bg-base-100 shadow-xl">
+<!-- img3 -->
+  <div class="basis-1/4 bg-base-100 shadow-xl">
     <img src="/images/stock/livingroom.jpg" alt="">
   </div>
-
-  <div class="w-64 bg-base-100 shadow-xl">
-    <img src="/images/stock/bedroom.jpg" alt="">
-  </div>
 </div>
-
 <!-- review -->
-<div>
-    <div class="border border-2 border-primary">
-        <div class="px-8 py-4"> <!-- outer div-->
-            <div class="pb-2"> <!-- posted by and tenancy dates-->
-
-                        <p>Review posted by USER</p>
-                        <p>Tenancy from X to Y</p>
-                    
-            </div>
-            <div> <!-- review title and body-->
-                <h1 class="text-2xl font-bold pb-2">Review title</h1>
-                <p class="pt-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio, dolores?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea nihil ut maiores. Enim cumque, eaque at rem, sequi architecto maiores qui nemo esse modi nobis nesciunt molestiae ducimus cum officiis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam sit quas amet, inventore debitis atque nobis iusto mollitia possimus in commodi cupiditate recusandae distinctio, similique, quod adipisci culpa voluptatem! Adipisci unde id maxime dolores modi incidunt nihil sit, illo asperiores.</p>
-            </div>
-            
-        </div>
-        
+<div class="border-2 border-amber-600 px-8 py-4"> <!-- outer review div-->
+    <div class="pb-2"> <!-- posted by and tenancy dates-->
+        <p>Review posted by USER</p>
+        <p>Tenancy from X to Y</p>
+    </div>
+    <div> <!-- review title and body-->
+        <h1 class="text-2xl font-bold pb-2">Review title</h1>
+        <p class="pt-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio, dolores?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea nihil ut maiores. Enim cumque, eaque at rem, sequi architecto maiores qui nemo esse modi nobis nesciunt molestiae ducimus cum officiis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam sit quas amet, inventore debitis atque nobis iusto mollitia possimus in commodi cupiditate recusandae distinctio, similique, quod adipisci culpa voluptatem! Adipisci unde id maxime dolores modi incidunt nihil sit, illo asperiores.</p>
     </div>
 </div>
+<!-- review 2 -->
+<div class="border-2 border-amber-600 px-8 py-4 my-4"> <!-- outer review div-->
+    <div class="pb-2"> <!-- posted by and tenancy dates-->
+        <p>Review posted by USER</p>
+        <p>Tenancy from X to Y</p>
+    </div>
+    <div> <!-- review title and body-->
+        <h1 class="text-2xl font-bold pb-2">Review title</h1>
+        <p class="pt-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio, dolores?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea nihil ut maiores. Enim cumque, eaque at rem, sequi architecto maiores qui nemo esse modi nobis nesciunt molestiae ducimus cum officiis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam sit quas amet, inventore debitis atque nobis iusto mollitia possimus in commodi cupiditate recusandae distinctio, similique, quod adipisci culpa voluptatem! Adipisci unde id maxime dolores modi incidunt nihil sit, illo asperiores.</p>
+    </div>
+</div>
+<!-- review 3 -->
+<div class="border-2 border-amber-600 px-8 py-4"> <!-- outer review div-->
+    <div class="pb-2"> <!-- posted by and tenancy dates-->
+        <p>Review posted by USER</p>
+        <p>Tenancy from X to Y</p>
+    </div>
+    <div> <!-- review title and body-->
+        <h1 class="text-2xl font-bold pb-2">Review title</h1>
+        <p class="pt-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio, dolores?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea nihil ut maiores. Enim cumque, eaque at rem, sequi architecto maiores qui nemo esse modi nobis nesciunt molestiae ducimus cum officiis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam sit quas amet, inventore debitis atque nobis iusto mollitia possimus in commodi cupiditate recusandae distinctio, similique, quod adipisci culpa voluptatem! Adipisci unde id maxime dolores modi incidunt nihil sit, illo asperiores.</p>
+    </div>
 </div>
 
-
+</div>
+</div>
 <%- include('partials/footer') -%>
