--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -1,69 +1,20 @@
 <%- include('partials/header') -%>
 <div class="container mx-auto px-4">
+  <!-- row 1 -->
   <div class="grid grid-cols-3 gap-4 py-5">
+      <% for(var i=0; i<review.length; i++) {%>
     <div class="card w-96 bg-base-100 shadow-xl">
       <figure><img src="/images/stock/cat.jpg" alt="Shoes" /></figure>
       <div class="card-body">
-        <h2 class="card-title">Shoes!</h2>
+        <h2 class="card-title"><%= review[i].title%></h2>
         <p>If a dog chews shoes whose shoes does he choose?</p>
         <div class="card-actions justify-end">
-          <button class="btn btn-primary">View</button>
+          <button class="btn btn-primary"><a href="/property">View</a></button>
         </div>
       </div>
     </div>
-    <div class="card w-96 bg-base-100 shadow-xl">
-      <figure><img src="/images/stock/cat.jpg" alt="Shoes" /></figure>
-      <div class="card-body">
-        <h2 class="card-title">Shoes!</h2>
-        <p>If a dog chews shoes whose shoes does he choose?</p>
-        <div class="card-actions justify-end">
-          <button class="btn btn-primary">View</button>
-        </div>
-      </div>
-    </div>
-    <div class="card w-96 bg-base-100 shadow-xl">
-      <figure><img src="/images/stock/cat.jpg" alt="Shoes" /></figure>
-      <div class="card-body">
-        <h2 class="card-title">Shoes!</h2>
-        <p>If a dog chews shoes whose shoes does he choose?</p>
-        <div class="card-actions justify-end">
-          <button class="btn btn-primary">View</button>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="grid grid-cols-3 gap-4 py-6">
-    <div class="card w-96 bg-base-100 shadow-xl">
-      <figure><img src="/images/stock/cat.jpg" alt="Shoes" /></figure>
-      <div class="card-body">
-        <h2 class="card-title">Shoes!</h2>
-        <p>If a dog chews shoes whose shoes does he choose?</p>
-        <div class="card-actions justify-end">
-          <button class="btn btn-primary">View</button>
-        </div>
-      </div>
-    </div>
-    <div class="card w-96 bg-base-100 shadow-xl">
-      <figure><img src="/images/stock/cat.jpg" alt="Shoes" /></figure>
-      <div class="card-body">
-        <h2 class="card-title">Shoes!</h2>
-        <p>If a dog chews shoes whose shoes does he choose?</p>
-        <div class="card-actions justify-end">
-          <button class="btn btn-primary">View</button>
-        </div>
-      </div>
-    </div>
-    <div class="card w-96 bg-base-100 shadow-xl">
-      <figure><img src="/images/stock/cat.jpg" alt="Shoes" /></figure>
-      <div class="card-body">
-        <h2 class="card-title">Shoes!</h2>
-        <p>If a dog chews shoes whose shoes does he choose?</p>
-        <div class="card-actions justify-end">
-          <button class="btn btn-primary">View</button>
-        </div>
-      </div>
-    </div>
+    <% } %>
   </div>
 </div>
+
 <%- include('partials/footer') -%>
