--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,8 @@
     <div class="max-w-md">
       <h1 class="text-5xl font-bold">Hello there</h1>
       <p class="py-6">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
-      <button class="btn btn-primary">Get Started</button>
+      <button class="btn btn-primary mx-2"><a href="/login">Log in</a></button>
+      <button class="btn btn-primary mx-2"><a href="/signup">Sign up</a></button>
     </div>
   </div>
 </div>
