--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,13 +3,11 @@
 <div class="hero min-h-screen bg-base-200">
   <div class="hero-content text-center">
     <div class="max-w-md">
-      <h1 class="text-5xl font-bold">Hello there</h1>
-      <p class="py-6">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
-      <button class="btn btn-primary mx-2"><a href="/login">Log in</a></button>
-      <button class="btn btn-primary mx-2"><a href="/signup">Sign up</a></button>
+      <h3 class="text-3xl font-bold">Rate Your Rental: The Ultimate Review Platform for Renters</h3>
+      <p class="py-6">Take control of your rental experience. Share honest assessments of your property and landlord with a community of like-minded renters. Help others make informed decisions and make your voice heard. Sign up now and elevate your rental journey!</p>
+      <button class="btn btn-primary">Get Started</button>
     </div>
   </div>
 </div>
-
 
 <%- include('partials/footer') -%>
