new reviews are now connected to the property model/document

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -22,14 +22,14 @@
   </head>
   <body class="bg-base-200">
         <!-- navbar -->
-    <div class="navbar bg-base-200 py-4 px-4">
+    <div class="navbar bg-base-300 py-4 px-4">
       <div class="flex-1">
         <a class="btn btn-primary normal-case text-xl" href="/">Rate your rental</a>
       </div>
         <!-- search bar -->
       <div class="flex-none">
         <div class="">
-          <div class="form bg-base-200 mr-1">
+          <div class="form bg-base-300 mr-1">
             <input type="text" placeholder="Search" class="input input-bordered" />
           </div>
         </div>
@@ -38,9 +38,9 @@
         
       <div class="flex-none">
         <ul class="menu menu-horizontal px-1">
-          <li><a href="/feed">Feed</a></li>
-          <li><a href="/property">Property</a></li>
-          <li><a href="/reviews">Reviews</a></li>
+          <li class="mx-1"><a href="/feed">Feed</a></li>
+          <li class="mx-1"><a href="/property">Property</a></li>
+          <li class="mx-1"><a href="/reviews">Reviews</a></li>
         </ul>
       </div>
       <label tabindex="0" class="btn btn-secondary btn-circle avatar mx-2">
