--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -1,15 +1,15 @@
 <%- include('partials/header') -%>
-<div class="container mx-auto px-4">
+<div class="container mx-auto px-4 py-5">
   <!-- row 1 -->
-  <div class="grid grid-cols-3 gap-4 py-5">
-      <% for(var i=0; i<review.length; i++) {%>
+  <div class="grid grid-cols-3 gap-4">
+      <% for(var i=0; i<property.length; i++) {%>
     <div class="card w-96 bg-base-100 shadow-xl">
       <figure><img src="/images/stock/bedroom.jpg" alt="Shoes" /></figure>
       <div class="card-body">
-        <h2 class="card-title"><%= review[i].propertyAddress%></h2>
-        <p><%= review[i].title%></p>
+        <h2 class="card-title"><%= property[i].streetName%>, <%= property[i].postcode.toUpperCase()%></h2>
+        <!-- <p><%= property[i].title%></p> -->
         <div class="card-actions justify-end">
-          <button class="btn btn-primary"><a href="/property">View Property</a></button>
+          <button class="btn btn-primary"><a href="/property/<%= property[i]._id%>">View Property</a></button>
         </div>
       </div>
     </div>
