--- a/views/property.ejs
+++ b/views/property.ejs
@@ -1,9 +1,9 @@
 <%- include('partials/header') -%>
-<div class="container mx-auto px-20 py-10">
+<div class="container mx-auto px-20 py-5">
 <!-- header -->
 <div> <!-- whole property div-->
     <div>
-        <h1 class="text-2xl font-bold">Property address</h1>
+        <h1 class="text-2xl font-bold"> <%= property.streetName%>, <%= property.postcode.toUpperCase()%></h1>
     </div>
 <!-- images in grid-->
 <div class="flex flex-row justify-evenly py-4 border-2 border-amber-600 my-4">
@@ -22,6 +22,7 @@
 </div>
 <!-- review -->
 <div class="border-2 border-amber-600 px-8 py-4"> <!-- outer review div-->
+  <% for(var i=0; i<property.length; i++) {%>
     <div class="pb-2"> <!-- posted by and tenancy dates-->
         <p>Review posted by USER</p>
         <p>Tenancy from X to Y</p>
@@ -30,28 +31,7 @@
         <h1 class="text-2xl font-bold pb-2">Review title</h1>
         <p class="pt-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio, dolores?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea nihil ut maiores. Enim cumque, eaque at rem, sequi architecto maiores qui nemo esse modi nobis nesciunt molestiae ducimus cum officiis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam sit quas amet, inventore debitis atque nobis iusto mollitia possimus in commodi cupiditate recusandae distinctio, similique, quod adipisci culpa voluptatem! Adipisci unde id maxime dolores modi incidunt nihil sit, illo asperiores.</p>
     </div>
-</div>
-<!-- review 2 -->
-<div class="border-2 border-amber-600 px-8 py-4 my-4"> <!-- outer review div-->
-    <div class="pb-2"> <!-- posted by and tenancy dates-->
-        <p>Review posted by USER</p>
-        <p>Tenancy from X to Y</p>
-    </div>
-    <div> <!-- review title and body-->
-        <h1 class="text-2xl font-bold pb-2">Review title</h1>
-        <p class="pt-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio, dolores?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea nihil ut maiores. Enim cumque, eaque at rem, sequi architecto maiores qui nemo esse modi nobis nesciunt molestiae ducimus cum officiis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam sit quas amet, inventore debitis atque nobis iusto mollitia possimus in commodi cupiditate recusandae distinctio, similique, quod adipisci culpa voluptatem! Adipisci unde id maxime dolores modi incidunt nihil sit, illo asperiores.</p>
-    </div>
-</div>
-<!-- review 3 -->
-<div class="border-2 border-amber-600 px-8 py-4"> <!-- outer review div-->
-    <div class="pb-2"> <!-- posted by and tenancy dates-->
-        <p>Review posted by USER</p>
-        <p>Tenancy from X to Y</p>
-    </div>
-    <div> <!-- review title and body-->
-        <h1 class="text-2xl font-bold pb-2">Review title</h1>
-        <p class="pt-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio, dolores?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea nihil ut maiores. Enim cumque, eaque at rem, sequi architecto maiores qui nemo esse modi nobis nesciunt molestiae ducimus cum officiis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam sit quas amet, inventore debitis atque nobis iusto mollitia possimus in commodi cupiditate recusandae distinctio, similique, quod adipisci culpa voluptatem! Adipisci unde id maxime dolores modi incidunt nihil sit, illo asperiores.</p>
-    </div>
+    <% } %>
 </div>
 
 </div>
