--- a/views/reviews.ejs
+++ b/views/reviews.ejs
@@ -1,15 +1,25 @@
 <%- include('partials/header') -%>
 
-<div class="container mx-auto">
+<div class="container mx-auto py-5">
+
+
+
 <form class="w-full max-w-lg mx-auto" action="/reviews/createReview" method="POST">
-  <div class="flex  -mx-3 mb-6 justify-center">
-    <div class="w-full px-3">
+  <div class="flex flex-wrap -mx-3 mb-6">
+    <div class="w-full md:w-2/3 px-3 mb-6 md:mb-0">
       <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-property-address">
-        Property address
+        Street name and number
       </label>
-      <input type="text" placeholder="Type here" class="input input-bordered input-primary w-full form-control" id="address" name="address"/>
+      <input type="text" placeholder="Type here" class="input input-bordered input-primary w-full" id="streetName" name="streetName"/>
+    </div>
+    <div class="w-full md:w-1/3 px-3">
+      <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-property-address">
+        Postcode
+      </label>
+      <input type="text" placeholder="Type here" class="input input-bordered input-primary w-full" id="postcode" name="postcode"/>
     </div>
   </div>
+  
   <div class="flex flex-wrap -mx-3 mb-6">
     <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
       <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-tenancy-from">
