--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -39,8 +39,12 @@
       <div class="flex-none">
         <ul class="menu menu-horizontal px-1">
           <li class="mx-1"><a href="/feed">Feed</a></li>
-          <li class="mx-1"><a href="/property">Property</a></li>
-          <li class="mx-1"><a href="/reviews">Reviews</a></li>
+          <li class="mx-1"><a href="/reviews">Create review</a></li>
+          <!-- hide if logged in -->
+          <li class="mx-1"><a href="/signup">Sign up</a></li>
+          <li class="mx-1"><a href="/login">Log in</a></li>
+          <!-- hide if not logged in -->
+          <li class="mx-1"><a href="/logout">Log out</a></li>
         </ul>
       </div>
       <label tabindex="0" class="btn btn-secondary btn-circle avatar mx-2">
