--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,17 @@
 <%- include('partials/header') -%>
-
-<div class="hero min-h-screen bg-base-200">
-  <div class="hero-content text-center">
+<div class="container mx-auto px-4 py-5">
+  <div class="grid grid-cols-2 gap-4">
+  <div class="text-center mx-auto">
     <div class="max-w-md">
       <h3 class="text-3xl font-bold">Rate Your Rental: The Ultimate Review Platform for Renters</h3>
-      <p class="py-6">Take control of your rental experience. Share honest assessments of your property and landlord with a community of like-minded renters. Help others make informed decisions and make your voice heard. Sign up now and elevate your rental journey!</p>
-      <button class="btn btn-primary">Get Started</button>
+      <p class="py-3">Take control of your rental experience. Share honest assessments of your property and landlord with a community of like-minded renters. Help others make informed decisions and make your voice heard. Sign up now and elevate your rental journey!</p>
+      <a href="/signup"><button class="btn btn-sm btn-primary">Sign up today</button></a>
+      <p class="pt-3">Our mission is to empower renters in the UK to make informed decisions and elevate their rental experience. We aim to provide a platform where renters can openly and honestly share their experiences with properties and landlords, while fostering a supportive community of like-minded individuals. Through our platform, we strive to promote transparency and accountability in the rental industry, ultimately benefiting all renters in the UK.</p>
     </div>
+  </div>
+  <div>
+    <img src="/images/young_people.jpg" alt="" class="my-2 mx-auto">
+  </div>
   </div>
 </div>
 
