trying to add img to form

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -26,16 +26,7 @@
       <div class="flex-1">
         <a class="btn btn-primary normal-case text-xl" href="/">Rate your rental</a>
       </div>
-        <!-- search bar -->
-      <div class="flex-none">
-        <div class="">
-          <div class="form bg-base-300 mr-1">
-            <input type="text" placeholder="Search" class="input input-bordered" />
-          </div>
-        </div>
-      </div>
-        <!-- avatar -->
-        
+        <!-- navigation -->
       <div class="flex-none">
         <ul class="menu menu-horizontal px-1">
           <li class="mx-1"><a href="/feed">Feed</a></li>
@@ -47,10 +38,20 @@
           <li class="mx-1"><a href="/logout">Log out</a></li>
         </ul>
       </div>
+      <!-- search bar -->
+      <div class="flex-none">
+        <div class="">
+          <div class="form bg-base-300 mr-1">
+            <input type="text" placeholder="Search" class="input input-bordered" />
+          </div>
+        </div>
+      </div>
+      <!-- avatar -->
       <label tabindex="0" class="btn btn-secondary btn-circle avatar mx-2">
         <div class="w-10 rounded-full">
-          <img src="/images/stock/cat.jpg" />
+          <a href="/profile"><img src="/images/stock/cat.jpg" /></a>
         </div>
       </label>
+      
     </div>
   </div>
