--- a/views/reviews.ejs
+++ b/views/reviews.ejs
@@ -2,9 +2,7 @@
 
 <div class="container mx-auto py-5">
 
-
-
-<form class="w-full max-w-lg mx-auto" action="/reviews/createReview" method="POST">
+<form class="w-full max-w-lg mx-auto" action="/reviews/createReview" enctype="multipart/form-data" method="POST">
   <div class="flex flex-wrap -mx-3 mb-6">
     <div class="w-full md:w-2/3 px-3 mb-6 md:mb-0">
       <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-property-address">
@@ -47,16 +45,27 @@
       <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="body">
         Review body
       </label>
-      <input type="text" placeholder="Type here" class="input input-bordered input-primary w-full form-control " id="body" name="body" />
+      <textarea id="message" rows="4" placeholder="Type here" class="textarea input-bordered input-primary w-full form-control " id="body" name="body"></textarea>
     </div>
   </div>
   <div class="flex flex-wrap -mx-3 mb-6">
+    <div class="w-full px-3">
+      <div class="mb-3">
+        <label for="imgUpload" class="form-label">Image</label>
+        <input type="file" class="form-control" id="imageUpload" name="file">
+      </div>
+    <!-- <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="imgUpload">
+      Upload an image (optional)
+    </label>
+    <input type="file" class="file-input file-input-primary file-input-xs w-full max-w-xs form-control" id="imageUpload" name="file" /> -->
+    </div>
+  </div>
+  <div class="flex flex-wrap -mx-3 my-6">
     <div class="w-full px-3">
     <button type="submit" class="btn btn-primary" value="Upload">Submit</button>
   </div>
 </div>
 </form>
 </div>
-
 
 <%- include('partials/footer') -%>
