--- a/views/property.ejs
+++ b/views/property.ejs
@@ -6,7 +6,7 @@
         <h1 class="text-2xl font-bold"> <%= property.streetName%>, <%= property.postcode.toUpperCase()%></h1>
     </div>
 <!-- images in grid-->
-<div class="flex flex-row justify-evenly py-4 border-2 border-amber-600 my-4">
+<div class="grid lg:grid-cols-3 md:grid-cols-2 sm:grid-cols-1 gap-4 py-4 border-2 border-amber-600 my-4">
     <!-- img1 -->
     <div class="basis-1/4 bg-base-100 shadow-xl">
       <img src="/images/stock/bedroom.jpg" alt="">
