fixed image upload on review form

--- a/views/property.ejs
+++ b/views/property.ejs
@@ -26,6 +26,7 @@
     <div class="pb-2"> <!-- posted by and tenancy dates-->
         <p>Review posted by USER</p>
         <p>Tenancy from <%= review[i].tenancyFrom%> to <%= review[i].tenancyTo%></p>
+        <!--<img src="<%= review[i].image%>">-->
     </div>
     <div> <!-- review title and body-->
         <h1 class="text-2xl font-bold pb-2"><%= review[i].title%></h1>
