--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -27,7 +27,8 @@
         <a class="btn btn-primary normal-case text-xl" href="/">Rate your rental</a>
       </div>
         <!-- navigation -->
-      <div class="flex-none">
+        <div class="hidden lg:block">
+          <div class="flex-none">
         <ul class="menu menu-horizontal px-1">
           <li class="mx-1"><a href="/feed">Feed</a></li>
           <li class="mx-1"><a href="/reviews">Create review</a></li>
@@ -40,7 +41,8 @@
           <li class="mx-1"><a href="/logout">Log out</a></li>
           <% } %>
         </ul>
-      </div>
+          </div>
+        </div>
       <!-- search bar -->
       <div class="flex-none">
         <div class="">
@@ -49,12 +51,36 @@
           </div>
         </div>
       </div>
-      <!-- avatar -->
-      <label tabindex="0" class="btn btn-secondary btn-circle avatar mx-2">
-        <div class="w-10 rounded-full">
-          <a href="/profile"><img src="/images/stock/cat.jpg" /></a>
+      <!-- avatar, show only on md and above-->
+      <div class="hidden lg:block">
+        <label tabindex="0" class="btn btn-secondary btn-circle avatar mx-2">
+          <div class="w-10 rounded-full">
+            <a href="/profile"><img src="/images/stock/cat.jpg" /></a>
+          </div>
+        </label>
         </div>
-      </label>
+      <!-- responsive nav, show only below md -->
+    <div class="lg:hidden sm:block">
+      <div class="dropdown dropdown-end">
+        <label tabindex="0" class="btn btn-secondary btn-circle avatar mx-2">
+          <div class="w-10 rounded-full">
+           <img src="/images/stock/cat.jpg"/>
+          </div>
+        </label>
+        <ul tabindex="0" class="mt-3 p-2 shadow menu menu-compact dropdown-content bg-base-100 rounded-box w-52">
+            <li class="mx-1"><a href="/profile">Profile</a></li>
+            <li class="mx-1"><a href="/feed">Feed</a></li>
+            <li class="mx-1"><a href="/reviews">Create review</a></li>
+            <!-- hide if logged in -->
+            <% if(user == undefined){ %>          
+            <li class="mx-1"><a href="/signup">Sign up</a></li>
+            <li class="mx-1"><a href="/login">Log in</a></li>
+            <% } else{ %> 
+            <!-- hide if not logged in -->
+            <li class="mx-1"><a href="/logout">Log out</a></li>
+            <% } %>
+          </ul>
+      </div>
+    </div>
       
     </div>
-  </div>
