--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -3,6 +3,13 @@
   <div class="row mt-5">
       <div class="col-3">
           <div>
+            <div>
+              <img src="images/stock/cat.jpg" alt="" class="pb-2">
+            </div>
+            <div class="pb-4">
+              <h3 class="text-m font-bold pb-2">Change your profile photo</h3>
+              <input type="file" class="file-input file-input-sm file-input-bordered file-input-primary w-full max-w-xs" />
+            </div>
               <p><strong>User Name</strong>: <%= user.userName %></p>
               <p><strong>Email</strong>: <%= user.email %></p>
               <a href="/logout" class="col-3 btn btn-primary">Logout</a>
