--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -44,13 +44,13 @@
           </div>
         </div>
       <!-- search bar -->
-      <div class="flex-none">
+      <!-- <div class="flex-none">
         <div class="">
           <div class="form bg-base-300 mr-1">
             <input type="text" placeholder="Search" class="input input-bordered" />
           </div>
         </div>
-      </div>
+      </div> -->
       <!-- avatar, show only on md and above-->
       <div class="hidden lg:block">
         <label tabindex="0" class="btn btn-secondary btn-circle avatar mx-2">
