--- a/src/style.css
+++ b/src/style.css
@@ -5,3 +5,13 @@
 ul.menu li a:hover{
 color: black;
 }
+
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+  }
+  
+.footer {
+    margin-top: auto;
+  }
