--- a/views/property.ejs
+++ b/views/property.ejs
@@ -11,8 +11,8 @@
   <% for(var i=0; i<review.length; i++) {%>
     <!-- image -->
     <% if(review[i].image) {%>
-    <div class="sm:mx-4 md:mx-0">
-      <img src="<%= review[i].image%>">
+    <div class="sm:mx-4 md:mx-0 w-1/2 justify-center">
+      <img src="<%= review[i].image%>" class="">
   </div>
   <% } %>
   <% } %>
