added github link to footer

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 <footer class="footer footer-center p-4 bg-base-300 text-base-content">
     <div>
-      <p>Copyright © 2023 - All right reserved by Eleanor Latus</p>
+      <p>Copyright © 2023 - All right reserved by Eleanor Latus  |  <a href="https://github.com/eleanorlatus/rate-your-rental" target="_blank"><i class="fa-brands fa-github text-xl"></i></a></p>
     </div>
   </footer>
 </body>
