--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-ul.menu li a:hover, h3 a:hover{
+ul.menu li a:hover{
 color: black;
 }
 
@@ -15,3 +15,7 @@ body {
 .footer {
     margin-top: auto;
   }
+
+.footer a:hover, .footer i:hover{
+  color: rgb(223, 167, 60)
+}
