--- a/public/style.css
+++ b/public/style.css
@@ -3016,6 +3016,21 @@ html {
   padding: 0px;
 }
 
+.file-input-xs {
+  height: 1.5rem;
+  padding-right: 0.5rem;
+  font-size: 0.75rem;
+  line-height: 1rem;
+  line-height: 1.625;
+}
+
+.file-input-xs::file-selector-button {
+  margin-right: 0.5rem;
+  height: 1.375rem;
+  min-height: 1.375rem;
+  font-size: 0.75rem;
+}
+
 .file-input-sm {
   height: 2rem;
   padding-right: 0.75rem;
@@ -3027,6 +3042,21 @@ html {
   margin-right: 0.75rem;
   height: 1.875rem;
   min-height: 1.875rem;
+  font-size: 0.875rem;
+}
+
+.file-input-md {
+  height: 3rem;
+  padding-right: 1rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  line-height: 2;
+}
+
+.file-input-md::file-selector-button {
+  margin-right: 1rem;
+  height: 2.875rem;
+  min-height: 2.875rem;
   font-size: 0.875rem;
 }
 
@@ -3283,6 +3313,22 @@ html {
   width: 13rem;
 }
 
+.w-5\/6 {
+  width: 83.333333%;
+}
+
+.w-3\/6 {
+  width: 50%;
+}
+
+.w-36 {
+  width: 9rem;
+}
+
+.w-24 {
+  width: 6rem;
+}
+
 .max-w-lg {
   max-width: 32rem;
 }
@@ -3405,6 +3451,11 @@ html {
 .px-1 {
   padding-left: 0.25rem;
   padding-right: 0.25rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .pt-3 {
